<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin_half"
                    android:layout_marginBottom="@dimen/default_margin_half"
                    android:text="@string/dialog_exit_exit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mid_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--                <ImageView-->
                <!--                    android:id="@+id/image_exit"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginEnd="8dp"-->
                <!--                    android:src="@drawable/ic_close_24"-->
                <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintTop_toTopOf="parent"-->
                <!--                    app:tint="@color/icon_primary_inverse" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/dialog_exit_do_you_want_to_close_app"
                android:textColor="@color/white"
                android:textSize="@dimen/font.14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="?attr/selectableItemBackground"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/ginger"
                app:cardCornerRadius="@dimen/default_margin_half"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAccept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="@dimen/default_margin_half"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="@dimen/default_margin_half"
                    android:text="@string/dialog_exit_no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font.16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="?attr/selectableItemBackground"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/ginger_secondary"
                app:cardCornerRadius="@dimen/default_margin_half"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnDecline"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="@dimen/default_margin_half"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="@dimen/default_margin_half"
                    android:text="@string/dialog_exit_yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font.16" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>